# pytrofs

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
pytrofs/: __init__.py  toc.lark  trofs.py
pytrofs/tools/: __init__.py  pytrofs_util.py
scripts/: trofs-util.tcl
test/: hello-dmg-rootfs-trofs-create.tcl  hello_dmg_rootfs.trofs  lark-toc-test.py  tcl-io-test.tcl  test-toc.toc
test/hello_dmg_rootfs/files-with-brackets/: i-end-with-a-bracket.txt-}  i-end-with-an-open-bracket.txt-{  i-have-one-{-bracket.txt  i-have-one-}-bracket.txt  i-have-open-{-and-}-bracket-pair.txt  i-have-open-{-}-bracket-pair-far.txt  i-have-open-{}-bracket-pair-adjacent.txt  i-have-two-open-{-{-}-}-bracket-pair-farther-nested.txt  i-have-two-open-{-{}-}-bracket-pair-far-nested.txt  i-have-two-open-{{}}-bracket-pair-adjacent-nested.txt  i-have-two-{-non-adjacent-{-brackets-far.txt  i-have-two-{{-brackets-near.txt  i-have-two-}-non-adjacent-}-brackets-far.txt  i-have-two-}}-brackets-near.txt  i-have-unbalanced-{-{-}-bracket-far2.txt  i-have-unbalanced-{-{}-bracket-far1.txt  i-have-unbalanced-{-}-}-bracket-far2-opposite.txt  i-have-unbalanced-{{}-bracket-near.txt  i-have-unbalanced-{}-}-bracket-far1-opposite.txt  i-have-unbalanced-{}}-bracket-near-opposite.txt  {-i-am-surrounded-with-brackets.txt-}  {-i-begin-with-a-bracket.txt  }-i-begin-with-a-closed-bracket.txt
test/hello_dmg_rootfs/files-with-quotes/: "i-begin-with-a-quote.txt  i-end-with-a-quote.txt"  i-have-a-double-far-middle-"-"-quote.txt  i-have-a-double-near-middle-""-quote.txt  i-have-a-middle-"-quote.txt  ä-"-b.txt
test/hello_dmg_rootfs/files-with-spaces/:  i-start-and-end-with-a-space-and-have-a-"-in-the-middle.txt    i-start-and-end-with-a-space.txt    i-start-with-a-space.txt  astronaut dreams.txt  farty fart face.txt  i-end-with-a-space.txt 
test/hello_dmg_rootfs/symlinks-to-files-with-brackets/: astronaut-{{}-dreams.txt  bracket-i-am-surrounded-with-brackets.txt-bracket  bracket-i-begin-with-a-bracket-symlink.txt  i-end-with-a-bracket-symlink.txt-}  i-end-with-an-open-bracket-symlink.txt-{  i-have-one-left-bracket.txt  i-have-one-right-bracket.txt  nested-left-left-right-right-{{}}-bracket-near.txt  nested-near-{{}}-brackets.txt  unbalanced-left-left-right--bracket-near.txt  unbalanced-left-left-right-bracket-far2.txt  }-i-begin-with-a-closed-bracket-symlink.txt
test/hello_dmg_rootfs/symlinks-to-files-with-quotes/: "i-begin-with-a-quote-symlink.txt  i-end-with-a-quote-symlink.txt-quote  i-have-a-double-far-middle-"-"-quote-symlink.txt  i-have-a-double-near-middle-quote-quote-quote-symlink.txt  i-have-a-middle-quote-quote-symlink.txt  ä-"-b-unicode-symlink.txt
test/hello_dmg_rootfs/symlinks-to-files-with-spaces/: i-end-with-a-space-symlink.txt-space  no running.txt  space-i-start-and-end-with-a-space-symlink.txt-space  space-i-start-with-a-space-and-have-a-quote-in-the-middle-symlink.txt-space  space-i-start-with-a-space-symlink.txt
test/pytrofs/: test_trofs.py
