[metadata]
name = pytrofs
author = Jevin Sweval
author_email = jevinsweval@gmail.com
description = "Python implementation of Tcl's trofs (Tcl Read-Only FileSystem)"
version = attr: pytrofs.__version__
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jevinskie/pytrofs
license = BSD-2-Clause
license_files = LICENSE

[options]
python_requires = ~=3.10
packages = find:
zip_safe = True


[options.entry_points]
console_scripts =
  pytrofs-util = pytrofs.tools.pytrofs_util:main

[build-system]
requires = ["setuptools"]
